add ignore file

--- a/.gitignore
+++ b/.gitignore
@@ -55,6 +55,8 @@ src/glfw3Config.cmake
 src/glfw3ConfigVersion.cmake
 
 # Compiled binaries
+bin/
+bin-int/
 src/libglfw.so
 src/libglfw.so.3
 src/libglfw.so.3.5
